# RV042-BBS

./: CMakeLists.txt  LICENSE.md  README.md
lib/: bbs.config  resolve.c
lib/user/: Tom
src/: admin.c  banish.c  bbs.c  bbs.h  board.c  command.c  command2.c  dbase.c  editor.c  mail.c  message.c  resolve.c  telnet.h  user.c
